# cryptohopper-python-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: Authentication.md  Error-Handling.md  Getting-Started.md  Rate-Limits.md
src/cryptohopper/: __init__.py  _client.py  _version.py  errors.py
src/cryptohopper/resources/: __init__.py  ai.py  app.py  arbitrage.py  backtest.py  chart.py  exchange.py  hoppers.py  market.py  marketmaker.py  platform.py  signals.py  social.py  strategy.py  subscription.py  template.py  tournaments.py  user.py  webhooks.py
tests/: conftest.py  test_client.py  test_errors.py  test_resources.py  test_resources_a1.py  test_resources_a2.py  test_resources_a3.py
